Add new build environment to platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -136,6 +136,21 @@ board = adafruit_feather_m4_can
 build_flags = -DUSE_LIBDIVIDE -fpermissive -std=gnu++11
 upload_protocol = sam-ba
 
+;STM32 Pazi88 Official core
+;[env:pazi88_F407VE]
+;platform = ststm32
+;platform = https://github.com/platformio/platform-ststm32.git
+;framework = arduino
+;board = genericSTM32F407VET6
+;board = pazi88_f407ve
+;lib_deps = stm32duino/STM32duino RTC, greiman/SdFat
+;board_build.core = stm32
+;build_flags = -DUSE_LIBDIVIDE -std=gnu++11 -UBOARD_MAX_IO_PINS -DENABLE_HWSERIAL2 -DENABLE_HWSERIAL3 -DUSBCON -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC -DHAL_CAN_MODULE_ENABLED
+;upload_protocol = dfu
+;debug_tool = stlink
+;monitor_speed = 115200
+
+
 
 ;Support for the stm32f407 doesn't look ready in platformio yet
 ;[env:genericSTM32F407VE]
